--- a/html_css/box/ensyu.html
+++ b/html_css/box/ensyu.html
@@ -2,7 +2,7 @@
 <html lang="jp">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="box.css">
+  <link rel="stylesheet" href="ensyu.css">
   <title>BOX</title>
 </head>
 <body>
