--- a/html_css/caravan/index.html
+++ b/html_css/caravan/index.html
@@ -36,10 +36,29 @@
     </div>
   </div>
 
-  <div class="main">
-    <div class="blog"></div>
-    <div class="sidebar"></div>
-  </div>
+  <main>
+    <section class="blog">
+      <h2 class="blog-heading">Recent Blog</h2>
+
+      <div class="blog-item">
+        <img class="blog-image" src="img/forest.jpg">
+        <section class="blog-text">
+          <h3>
+            <a href="single.html">
+              Hopeful lessons from<br>
+              the battle to save<br>
+              rainforest
+            </a>
+          </h3>
+          <p>June 19,2017</p>
+          <span class="category">Nature</span>
+        </section>
+      </div>
+    </section>
+    <div class="sidebar">
+
+    </div>
+  </main>
 
   <footer>
     <p class="footer-text">©︎ All rights reserved by Infratop.Inc</p>
